# zephyr_citisys

./: .gitignore  ADR.md  README.md
boards/arm/urban_power_4g/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  board.yml  revision.cmake  urban_power_4g.dts  urban_power_4g.yaml  urban_power_4g_0_99_0.overlay  urban_power_4g_1_0_1.overlay  urban_power_4g_3_5_0.overlay  urban_power_4g_defconfig
libs/: CMakeLists.txt  Kconfig  utils.c  utils.h
libs/drivers/: CMakeLists.txt  Kconfig
libs/drivers/modem/: CMakeLists.txt  Kconfig  Kconfig.lynq-l5xx  lynq-l5xx.c  lynq-l5xx.h
libs/dts/bindings/: vendor-prefixes.txt
libs/dts/bindings/modem/: lynq,l5xx.yaml
libs/mqtt/: Kconfig  mqtt.c  mqtt.h
libs/zephyr/: module.yaml
tests/modem_func_test/: CMakeLists.txt  Kconfig  prj.conf
tests/modem_func_test/snippets/debug/: debug.conf
tests/modem_func_test/snippets/modem/: modem.conf
tests/modem_func_test/src/: main.c
tests/modem_initialization_test/: CMakeLists.txt  README.md
tests/modem_initialization_test/snippets/debug/: debug.conf
tests/modem_initialization_test/snippets/logging/: logging.conf
tests/modem_initialization_test/snippets/modem/: modem.conf  modem.overlay  snippet.yml
tests/modem_initialization_test/src/: main.c
tests/modem_shell_test/: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf
tests/urban_power_4g_pin_test/: CMakeLists.txt  app.overlay
tests/urban_power_4g_pin_test/snippets/debug/: debug.conf
tests/urban_power_4g_pin_test/snippets/logging/: logging.conf
tests/urban_power_4g_pin_test/src/: main.c
(+7 files in other folders)
