list(APPEND EXTRA_ZEPHYR_MODULES
    ${CMAKE_CURRENT_SOURCE_DIR}/../../libs
    )

cmake_minimum_required(VERSION 3.20.0)

set(BOARD_ROOT ${CMAKE_CURRENT_LIST_DIR}/../../)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(modem_initialization_test)

target_sources(app PRIVATE
  src/main.c
)

